--- a/spring-batch-docs/asciidoc/scalability.adoc
+++ b/spring-batch-docs/asciidoc/scalability.adoc
@@ -238,13 +238,13 @@ pattern:
 .Remote Chunking
 image::{batch-asciidoc}images/remote-chunking.png[Remote Chunking, scaledwidth="60%"]
 
-The master component is a single process, and the slaves are multiple remote processes.
-This pattern works best if the master is not a bottleneck, so the processing must be more
+The manager component is a single process, and the workers are multiple remote processes.
+This pattern works best if the manager is not a bottleneck, so the processing must be more
 expensive than the reading of items (as is often the case in practice).
 
-The master is an implementation of a Spring Batch `Step` with the `ItemWriter` replaced
+The manager is an implementation of a Spring Batch `Step` with the `ItemWriter` replaced
 by a generic version that knows how to send chunks of items to the middleware as
-messages. The slaves are standard listeners for whatever middleware is being used (for
+messages. The workers are standard listeners for whatever middleware is being used (for
 example, with JMS, they would be `MesssageListener` implementations), and their role is
 to process the chunks of items using a standard `ItemWriter` or `ItemProcessor` plus
 `ItemWriter`, through the `ChunkProcessor` interface. One of the advantages of using this
@@ -274,12 +274,12 @@ pattern:
 image::{batch-asciidoc}images/partitioning-overview.png[Partitioning Overview, scaledwidth="60%"]
 
 The `Job` runs on the left-hand side as a sequence of `Step` instances, and one of the
-`Step` instances is labeled as a master. The slaves in this picture are all identical
-instances of a `Step`, which could in fact take the place of the master, resulting in the
-same outcome for the `Job`. The slaves are typically going to be remote services but
-could also be local threads of execution. The messages sent by the master to the slaves
+`Step` instances is labeled as a manager. The workers in this picture are all identical
+instances of a `Step`, which could in fact take the place of the manager, resulting in the
+same outcome for the `Job`. The workers are typically going to be remote services but
+could also be local threads of execution. The messages sent by the manager to the workers
 in this pattern do not need to be durable or have guaranteed delivery. Spring Batch
-metadata in the `JobRepository` ensures that each slave is executed once and only once for
+metadata in the `JobRepository` ensures that each worker is executed once and only once for
 each `Job` execution.
 
 The SPI in Spring Batch consists of a special implementation of `Step` (called the
@@ -290,7 +290,7 @@ and their role is shown in the following sequence diagram:
 .Partitioning SPI
 image::{batch-asciidoc}images/partitioning-spi.png[Partitioning SPI, scaledwidth="60%"]
 
-The `Step` on the right in this case is the "remote" slave, so, potentially, there are
+The `Step` on the right in this case is the "`remote`" worker, so, potentially, there are
 many objects and or processes playing this role, and the `PartitionStep` is shown driving
 the execution.
 
@@ -299,7 +299,7 @@ The following example shows the `PartitionStep` configuration:
 
 [source, xml, role="xmlContent"]
 ----
-<step id="step1.master">
+<step id="step1.manager">
     <partition step="step1" partitioner="partitioner">
         <handler grid-size="10" task-executor="taskExecutor"/>
     </partition>
@@ -313,8 +313,8 @@ The following example shows the `PartitionStep` configuration using java configu
 [source, java, role="javaContent"]
 ----
 @Bean
-public Step step1Master() {
-    return stepBuilderFactory.get("step1.master")
+public Step step1Manager() {
+    return stepBuilderFactory.get("step1.manager")
         .<String, String>partitioner("step1", partitioner())
         .step(step1())
         .gridSize(10)
@@ -332,7 +332,7 @@ https://github.com/spring-projects/spring-batch/tree/master/spring-batch-samples
 Batch Samples] (see `Partition*Job.xml` configuration).
 
 Spring Batch creates step executions for the partitions called "step1:partition0", and so
-on. Many people prefer to call the master step "step1:master" for consistency. You can
+on. Many people prefer to call the manager step "step1:manager" for consistency. You can
 use an alias for the step (by specifying the `name` attribute instead of the `id`
 attribute).
 
@@ -367,7 +367,7 @@ following example:
 
 [source, xml, role="xmlContent"]
 ----
-<step id="step1.master">
+<step id="step1.manager">
     <partition step="step1" handler="handler"/>
 </step>
 
@@ -386,8 +386,8 @@ as shown in the following example:
 [source, java, role="javaContent"]
 ----
 @Bean
-public Step step1Master() {
-    return stepBuilderFactory.get("step1.master")
+public Step step1Manager() {
+    return stepBuilderFactory.get("step1.manager")
         .partitioner("step1", partitioner())
         .partitionHandler(partitionHandler())
         .build();
