Fixing small problems
While reviewing the previous commit, I spotted a number mismatch. While looking at that, I found a double space and a missing comma. I fixed all of those problems.

--- a/spring-batch-docs/asciidoc/jsr-352.adoc
+++ b/spring-batch-docs/asciidoc/jsr-352.adoc
@@ -584,8 +584,8 @@ JSR-352 provides two options for scaling batch jobs.  Both options support only 
 ==== Partitioning
 
 Conceptually, partitioning in JSR-352 is the same as it is in Spring Batch.  Meta-data is provided
-                to each worker to identify the input to be processed with the worker reporting back to the manager the
-                results upon completion.  However, there are some important differences:
+                to each worker to identify the input to be processed, with the workers reporting back to the manager the
+                results upon completion. However, there are some important differences:
 
 * Partitioned `Batchlet` - This will run multiple instances of the
                             configured `Batchlet` on multiple threads.  Each instance will have
