Add js to redirect old anchors to new ones

--- a/spring-batch-docs/asciidoc/toggle.adoc
+++ b/spring-batch-docs/asciidoc/toggle.adoc
@@ -4,6 +4,7 @@ ifdef::backend-html5[]
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/js.cookie.js"></script>
   <script type="text/javascript" src="js/DocumentToggle.js"></script>
+  <script type="text/javascript" src="js/Redirect.js"></script>
   <div class="docToggle-button">
     <input id="xmlButton" type="radio" name="docToggle" value="XML"><label for="xmlButton">XML</label>
     <input id="javaButton" type="radio" name="docToggle" value="Java" checked><label for="javaButton">Java</label>
