Polish 4ad06b508164b787d41c8ba74e22eba82a53e5c9

--- a/spring-batch-docs/asciidoc/retry.adoc
+++ b/spring-batch-docs/asciidoc/retry.adoc
@@ -420,7 +420,7 @@ The following example shows a declarative retry that uses the Spring AOP
 </aop:config>
 
 <bean id="retryAdvice"
-    class="org.springframework.batch.retry.interceptor.RetryOperationsInterceptor"/>
+    class="org.springframework.retry.interceptor.RetryOperationsInterceptor"/>
 ----
 
 [role="javaContent"]
