Update docs with expected behaviour in regards to skippable exceptions
Before this commit, the expected behaviour when a skippbale exception
occurs in a fault tolerant chunk-oriented step was not documented in
details.

This commit update the docs and adds a sample for each case (when a
skippable exception occurs during read, process and write).

Resolves BATCH-2541

--- a/spring-batch-docs/asciidoc/step.adoc
+++ b/spring-batch-docs/asciidoc/step.adoc
@@ -588,7 +588,9 @@ public Step step1() {
 
 In the preceding example, a `FlatFileItemReader` is used. If, at any point, a
 `FlatFileParseException` is thrown, the item is skipped and counted against the total
-skip limit of 10. Separate counts are made of skips on read, process, and write inside
+skip limit of 10. Exceptions (and their subclasses) that are declared might be thrown
+during any phase of the chunk processing (read, process, write) but separate counts
+are made of skips on read, process, and write inside
 the step execution, but the limit applies across all skips. Once the skip limit is
 reached, the next exception found causes the step to fail. In other words, the eleventh
 skip triggers the exception, not the tenth.
